fix: body style overflow: hidden

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,4 +36,5 @@ body {
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  overflow: hidden;
 }
